docs(java): 更新Java基础文档并删除JVM内存模型章节
- 更新Java IO章节描述，细化为传统IO流和NIO基础内容
- 添加BIO/NIO/AIO IO模型详解的关联进阶链接
- 调整后续进阶路径中的Java并发编程和集合框架链接格式
- 新增IO模型作为进阶学习路径选项
- 删除JVM内存模型与垃圾回收的完整章节内容