@@ -1,97 +1,96 @@
-# JVM 内存模型与垃圾回收
+# JVM垃圾回收详解
 
-## JVM 内存结构
+## 一、垃圾回收基础
 
-### 运行时数据区
+### 1.1 为什么需要垃圾回收？
 
-```
-┌─────────────────────────────────────────────────────────────┐
-│                      堆内存（Heap）                          │
-│  ┌─────────────┬─────────────┬─────────────┬─────────────┐  │
-│  │   新生代     │   Eden区    │  Survivor0  │  Survivor1  │  │
-│  │  (Young)    │   (8/10)    │   (1/10)    │   (1/10)    │  │
-│  └─────────────┴─────────────┴─────────────┴─────────────┘  │
-│                         ↓ 晋升                              │
-│  ┌─────────────────────────────────────────────────────┐    │
-│  │                   老年代（Old）                      │    │
-│  └─────────────────────────────────────────────────────┘    │
-└─────────────────────────────────────────────────────────────┘
-┌─────────────────────────────────────────────────────────────┐
-│                    元空间（Metaspace）                       │
-│  - 类元数据                                                  │
-│  - 常量池                                                    │
-│  - 方法信息                                                  │
-│  （JDK8 之前：永久代 PermGen）                               │
-└─────────────────────────────────────────────────────────────┘
-┌─────────────┐  ┌─────────────┐  ┌─────────────────────────┐
-│   虚拟机栈   │  │   本地方法栈 │  │       程序计数器         │
-│  - 栈帧     │  │  - Native  │  │  - 当前执行字节码位置    │
-│  - 局部变量  │  │             │  │  - 线程私有              │
-└─────────────┘  └─────────────┘  └─────────────────────────┘
-```
+**手动内存管理的问题**：
+- 忘记释放导致内存泄漏
+- 重复释放导致程序崩溃
+- 悬垂指针（指向已释放内存）
 
-### 堆内存详解
+**Java 的解决方案**：
+- 自动垃圾回收（Garbage Collection）
+- JVM 统一管理内存
+- 开发者无需关心释放细节
 
-#### 新生代（Young Generation）
+---
 
-| 区域 | 比例 | 说明 |
-|------|------|------|
-| Eden | 8/10 | 新对象分配区域 |
-| Survivor0 | 1/10 | 存活对象复制区 |
-| Survivor1 | 1/10 | 存活对象复制区 |
+### 1.2 判断对象存活
 
-**对象晋升过程**：
-1. 新对象在 Eden 分配
-2. Minor GC 后存活对象进入 Survivor
-3. 对象在 Survivor 之间复制，年龄 +1
-4. 年龄达到阈值（默认15）晋升老年代
+#### 1. 引用计数法（Reference Counting）
 
-#### 老年代（Old Generation）
-
-- 存放长期存活对象
-- 大对象直接进入（-XX:PretenureSizeThreshold）
-- Full GC 时回收
-
-### 栈帧结构
-
-```
-┌─────────────────┐
-│   局部变量表     │  基本数据类型、对象引用
-├─────────────────┤
-│    操作数栈      │  方法执行的工作区
-├─────────────────┤
-│  动态链接        │  指向运行时常量池的方法引用
-├─────────────────┤
-│  方法返回地址    │  方法执行完毕后的返回位置
-├─────────────────┤
-│  附加信息        │  调试信息等
-└─────────────────┘
+```java
+public class ReferenceCountingDemo {
+    private Object instance = null;
+    
+    public static void main(String[] args) {
+        ReferenceCountingDemo a = new ReferenceCountingDemo();
+        ReferenceCountingDemo b = new ReferenceCountingDemo();
+        
+        // 互相引用
+        a.instance = b;
+        b.instance = a;
+        
+        // 断开外部引用
+        a = null;
+        b = null;
+        
+        // 引用计数为 0，可以被回收
+        // 但循环引用问题无法解决
+    }
+}
 ```
 
-## 垃圾回收
+**缺点**：无法解决循环引用问题
 
-### 判断对象存活
-
-#### 1. 引用计数法
-
-- 每个对象维护引用计数
-- 计数为 0 时回收
-- **缺点**：无法解决循环引用
-
-#### 2. 可达性分析（JVM 使用）
+#### 2. 可达性分析（Reachability Analysis）✅
 
 ```
 GC Roots：
-  - 虚拟机栈中引用的对象
-  - 方法区中类静态属性引用的对象
-  - 方法区中常量引用的对象
-  - 本地方法栈中 JNI 引用的对象
-  - 所有被同步锁持有的对象
+  ├─ 虚拟机栈中引用的对象
+  │   └─ 局部变量表中的对象引用
+  │
+  ├─ 方法区中类静态属性引用的对象
+  │   └─ static 字段引用的对象（如 private static Object obj）
+  │
+  ├─ 方法区中运行时常量池引用的对象
+  │   ├─ 字符串常量池（如 "constant"）
+  │   └─ Class 常量池字面量引用
+  │
+  ├─ 本地方法栈中 JNI 引用的对象
+  │   └─ Native 方法持有的 Java 对象
+  │
+  ├─ 所有被同步锁持有的对象
+  │   └─ synchronized 锁住的对象
+  │
+  └─ JVM 内部引用
+      ├─ 类加载器
+      ├─ 异常对象（如 OutOfMemoryError）
+      └─ 系统类（如 java.lang.Object）
 ```
 
-### 垃圾回收算法详解
+**示例**：
+```java
+public class ReachabilityDemo {
+    private static Object staticObj = new Object(); // GC Root（静态属性）
+    
+    public void method() {
+        Object localObj = new Object(); // GC Root（栈帧局部变量）
+        String str = "constant";        // GC Root（字符串常量池）
+        
+        synchronized (this) {           // GC Root（同步锁）
+            // ...
+        }
+    }
+}
+```
 
-#### 1. 标记 - 清除（Mark-Sweep）
+---
+
+## 二、垃圾回收算法详解
+
+### 2.1 标记 - 清除（Mark-Sweep）
 
 ```
 ┌─────────────────────────────────────────┐
@@ -102,7 +101,7 @@ GC Roots：
 ├─────────────────────────────────────────┤
 │  阶段 2: 清除                            │
 │  ┌───┬─────┬───┬───────┬───┬─────┐     │
-│  │ ✓ │空隙 │ ✓ │ 空隙  │ ✓ │空隙 │     │  产生内存碎片
+│  │ ✓ │ 空隙 │ ✓ │  空隙 │ ✓  │空隙 │     │  产生内存碎片
 │  └───┴─────┴───┴───────┴───┴─────┘     │
 └─────────────────────────────────────────┘
 ```
@@ -121,19 +120,43 @@ GC Roots：
 
 **适用场景**：老年代（CMS 收集器）
 
+**代码模拟**：
+```java
+public class MarkSweepDemo {
+    // 伪代码展示原理
+    public void markSweep() {
+        // 1. 标记
+        for (Object obj : heap) {
+            if (isReachable(obj)) {
+                obj.mark(); // 标记为存活
+            }
+        }
+        
+        // 2. 清除
+        for (Object obj : heap) {
+            if (!obj.isMarked()) {
+                free(obj); // 释放内存
+            } else {
+                obj.unmark(); // 清除标记
+            }
+        }
+    }
+}
+```
+
 ---
 
-#### 2. 复制（Copying）
+### 2.2 复制（Copying）
 
 ```
-┌─────────────────────────────────────────────────────┐
-│          新生代（Young Generation）                  │
-│  ┌───────────────┬───────────────┐                 │
-│  │   Eden 区     │  Survivor 区  │                 │
-│  │   (80%)       │   (20%)       │                 │
-│  │               │  S0 + S1      │                 │
-│  └───────────────┴───────────────┘                 │
-└─────────────────────────────────────────────────────┘
+┌─────────────────────────────────────────────┐
+│          新生代（Young Generation）           │
+│  ┌───────────────┬───────────────┐          │
+│  │   Eden 区     │  Survivor 区   │          │
+│  │   (80%)       │   (20%)       │          │
+│  │               │  S0 + S1      │          │
+│  └───────────────┴───────────────┘          │
+└─────────────────────────────────────────────┘
 
 Minor GC 过程：
   Before:                      After:
@@ -159,27 +182,54 @@ Minor GC 过程：
 - **复制开销**：大量对象存活时效率低
 
 **优化方案**（HotSpot JVM）：
-- Eden:Survivor = 8:1:1（而非 1:1）
-- 每次使用 Eden + 一个 Survivor
-- 对象年龄+1 后切换到另一个 Survivor
+- 新生代分为 Eden + 两个 Survivor（S0/S1），比例为 8:1:1；
+- 每次只使用 Eden + 一个 Survivor（如 Eden+S0），另一个 Survivor 空闲；
+- 对象年龄 +1 后切换到空闲 Survivor，年龄达到阈值（默认 15）晋升老年代；
 
 **适用场景**：新生代（Serial、ParNew、Parallel Scavenge）
 
+**代码模拟**：
+```java
+public class CopyingGCDemo {
+    private MemoryRegion fromSpace;
+    private MemoryRegion to_space;
+    
+    public void gc() {
+        // 1. 标记 GC Roots 直接引用的对象
+        List<Object> roots = getGCRoots();
+        
+        // 2. 扫描 From Space，复制存活对象到 To Space
+        for (Object obj : from_space) {
+            if (isAlive(obj)) {
+                Object newAddr = copy(obj, to_space);
+                updateReference(obj, newAddr);
+            }
+        }
+        
+        // 3. 交换 From 和 To
+        swap(from_space, to_space);
+        
+        // 4. 清空原 From Space
+        from_space.clear();
+    }
+}
+```
+
 ---
 
-#### 3. 标记 - 整理（Mark-Compact）
+### 2.3 标记 - 整理（Mark-Compact）
 
 ```
 ┌─────────────────────────────────────────┐
-│  阶段 1: 标记（同 Mark-Sweep）          │
-│  ┌───┬───┬───┬───┬───┬───┬───┐         │
-│  │ ✓ │ ✗ │ ✓ │ ✗ │ ✗ │ ✓ │ ✗ │         │
-│  └───┴───┴───┴───┴───┴───┴───┘         │
+│  阶段 1: 标记（同 Mark-Sweep）            │
+│  ┌───┬───┬───┬───┬───┬───┬───┐          │
+│  │ ✓ │ ✗ │ ✓ │ ✗ │ ✗ │ ✓ │ ✗ │          │
+│  └───┴───┴───┴───┴───┴───┴───┘          │
 ├─────────────────────────────────────────┤
-│  阶段 2: 整理                           │
-│  ┌───┬───┬───┬─────────────────┐       │
-│  │ ✓ │ ✓ │ ✓ │    空闲空间     │       │  对象向一端移动
-│  └───┴───┴───┴─────────────────┘       │
+│  阶段 2: 整理                             │
+│  ┌───┬───┬───┬─────────────────┐         │
+│  │ ✓ │ ✓ │ ✓ │    空闲空间       │        │  对象向一端移动
+│  └───┴───┴───┴─────────────────┘        │
 └─────────────────────────────────────────┘
 ```
 
@@ -197,24 +247,51 @@ Minor GC 过程：
 
 **适用场景**：老年代（Serial Old、Parallel Old）
 
+**代码模拟**：
+```java
+public class MarkCompactDemo {
+    public void gc() {
+        // 1. 标记
+        List<Object> liveObjects = new ArrayList<>();
+        for (Object obj : heap) {
+            if (isReachable(obj)) {
+                liveObjects.add(obj);
+            }
+        }
+        
+        // 2. 整理 - 对象向一端移动
+        int compactedAddress = 0;
+        for (Object obj : liveObjects) {
+            int oldAddr = obj.getAddress();
+            move(obj, compactedAddress);
+            updateReferences(oldAddr, compactedAddress);
+            compactedAddress += obj.getSize();
+        }
+        
+        // 3. 清理边界外垃圾
+        clearAfter(compactedAddress);
+    }
+}
+```
+
 ---
 
-#### 4. 分代收集（Generational Collection）
+### 2.4 分代收集（Generational Collection）
 
 ```
 ┌──────────────────────────────────────────────────────┐
-│                     整堆（Heap）                      │
+│                     整堆（Heap）                       │
 │  ┌────────────────────────────────────────────────┐  │
 │  │              新生代（Young）                    │  │
-│  │  ┌──────────┬────────┬────────┐               │  │
-│  │  │   Eden   │ S0     │ S1     │  复制算法     │  │
-│  │  │  (80%)   │ (10%)  │ (10%)  │               │  │
-│  │  └──────────┴────────┴────────┘               │  │
+│  │  ┌──────────┬────────┬────────┐                │  │
+│  │  │   Eden   │ S0     │ S1     │  复制算法       │  │
+│  │  │  (80%)   │ (10%)  │ (10%)  │                │  │
+│  │  └──────────┴────────┴────────┘                │  │
 │  └────────────────────────────────────────────────┘  │
-│                        ↓ 晋升                         │
+│                        ↓ 晋升                        │
 │  ┌────────────────────────────────────────────────┐  │
 │  │              老年代（Old）                      │  │
-│  │           标记 - 整理算法                       │  │
+│  │             标记 - 整理算法                     │  │
 │  └────────────────────────────────────────────────┘  │
 └──────────────────────────────────────────────────────┘
 
@@ -239,14 +316,16 @@ Minor GC 过程：
 - **低停顿**：Minor GC 快速，Full GC 较少
 
 **缺点**：
-- **复杂**：需要维护年代划分和晋升机制
-- **跨代引用**：需要记忆集（Remembered Set）
+- **复杂**：需要维护年代划分和对象晋升机制；
+- **跨代引用**：新生代 GC 时，需扫描老年代中引用新生代对象的指针（通过 Remembered Set 记录），避免全量扫描老年代；
 
 **适用场景**：现代 JVM 默认方案（G1、ZGC 等）
 
-### 垃圾回收器详解
+---
 
-#### 1. Serial 收集器（单线程）
+## 三、垃圾回收器详解
+
+### 3.1 Serial 收集器（单线程）
 
 ```
 ┌─────────────────────────────────┐
@@ -260,13 +339,18 @@ Minor GC 过程：
 老年代：标记 - 整理算法
 
 优点：简单高效，无交互开销
-缺点：单线程，停顿时间长
+缺点：停顿时间长
 适用：客户端应用，小内存（<100M）
+```
+
+**配置参数**：
+```bash
+-XX:+UseSerialGC      # 启用 Serial 收集器
 ```
 
 ---
 
-#### 2. ParNew 收集器（Serial 的多线程版）
+### 3.2 ParNew 收集器（Serial 的多线程版）
 
 ```
 ┌─────────────────────────────────┐
@@ -283,9 +367,15 @@ Minor GC 过程：
 适用：多核 CPU，CMS 搭配
 ```
 
+**配置参数**：
+```bash
+-XX:+UseConcMarkSweepGC  # 启用 CMS（自动搭配 ParNew）
+-XX:ParallelGCThreads=4  # 设置并行线程数
+```
+
 ---
 
-#### 3. Parallel Scavenge / Parallel Old（吞吐量优先）
+### 3.3 Parallel Scavenge / Parallel Old（吞吐量优先）
 
 ```
 ┌─────────────────────────────────┐
@@ -307,24 +397,33 @@ Parallel Old（老年代）：标记 - 整理算法
 适用：后台计算任务，科学计算
 ```
 
+**配置参数**：
+```bash
+-XX:+UseParallelGC         # 启用 Parallel Scavenge
+-XX:+UseParallelOldGC      # 启用 Parallel Old
+-XX:MaxGCPauseMillis=100   # 最大停顿时间目标
+-XX:GCTimeRatio=99         # GC 时间占比 < 1%
+```
+
 ---
 
-#### 4. CMS（Concurrent Mark Sweep）
+### 3.4 CMS（Concurrent Mark Sweep）⭐
 
 ```
 ┌─────────────────────────────────────────────┐
 │  CMS 收集器（低停顿）                        │
-│  - JDK 1.5 引入                              │
+│  - JDK 1.5 引入                             │
 │  - 并发标记，并发清除                        │
 │  - 最短回收停顿时间                          │
 └─────────────────────────────────────────────┘
 
 执行阶段：
-  ┌──────────────┬──────────┬────────────┐
-  │   初始标记    │  并发标记 │  重新标记  │  并发清除  │
-  │   (STW)      │  (并发)   │  (STW)    │  (并发)   │
-  │  标记 GCRoots│  遍历图   │  修正变动  │  清垃圾    │
-  └──────────────┴──────────┴────────────┘
+  ┌──────────────┬──────────┬──────────────┬──────────┬──────────┐
+  │   初始标记    │  并发标记 │  并发预清理  │  重新标记  │  并发清除  │
+  │   (STW)      │  (并发)   │   (并发)     │  (STW)    │  (并发)   │
+  │  标记 GCRoots│  遍历图   │  处理跨代引用 │  修正变动  │  清垃圾    │
+  │  很短        │  很长     │  较长        │  较短      │  很长     │
+  └──────────────┴──────────┴──────────────┴──────────┴──────────┘
 
 优点：低停顿，并发执行
 缺点：
@@ -332,11 +431,39 @@ Parallel Old（老年代）：标记 - 整理算法
   - 浮动垃圾（并发期间产生的垃圾）
   - 内存碎片（标记 - 清除算法）
 适用：Web 应用，B/S 架构，注重用户体验
+
+**CMS 失败情况**：
+1. **Concurrent Mode Failure**：并发清理期间老年代空间不足，触发 Full GC；
+2. **Promotion Failed**：新生代 Minor GC 时，Survivor 区空间不足，对象需晋升老年代，但老年代也无连续空间，触发 Full GC。
+```
+
+**配置参数**：
+```bash
+-XX:+UseConcMarkSweepGC           # 启用 CMS
+-XX:CMSInitiatingOccupancyFraction=75  # 触发 CMS 的老年代阈值
+-XX:+UseCMSCompactAtFullCollection     # Full GC 时压缩
+-XX:CMSFullGCsBeforeCompaction=0       # 每次 Full GC 都压缩
+```
+
+**CMS 失败情况**：
+1. **Concurrent Mode Failure**：并发清理期间老年代空间不足
+2. **Promotion Failed**：新生代晋升失败
+
+**解决方案**：
+```bash
+# 增加老年代空间
+-Xmx4g -Xms4g
+
+# 降低触发阈值
+-XX:CMSInitiatingOccupancyFraction=60
+
+# 增加 Survivor 区
+-XX:SurvivorRatio=8
 ```
 
 ---
 
-#### 5. G1（Garbage First）
+### 3.5 G1（Garbage First）⭐⭐⭐
 
 ```
 ┌─────────────────────────────────────────────────────┐
@@ -368,9 +495,29 @@ Parallel Old（老年代）：标记 - 整理算法
 适用：大内存（>4GB），服务端应用
 ```
 
+**Region 类型**：
+
+| 类型 | 说明 | 特点 |
+|------|------|------|
+| **Eden** | 新对象分配区域 | 占大多数 |
+| **Survivor** | 存放 Minor GC 后存活对象 | 数量较少 |
+| **Old** | 存放长期存活对象 | 对象晋升目标 |
+| **Humongous** | 存放超大对象（Region 容量 50%） | 占用连续多个 Region，直接分配在老年代区域 |
+
+**配置参数**：
+```bash
+-XX:+UseG1GC                        # 启用 G1
+-XX:MaxGCPauseMillis=200            # 最大停顿时间目标
+-XX:InitiatingHeapOccupancyPercent=45  # 并发标记触发阈值
+-XX:G1HeapRegionSize=16m            # Region 大小（1MB-32MB）
+-XX:G1ReservePercent=10             # 预留堆比例
+-XX:G1NewSizePercent=5              # 新生代最小比例
+-XX:G1MaxNewSizePercent=60          # 新生代最大比例
+```
+
 ---
 
-#### 6. ZGC（超低延迟）
+### 3.6 ZGC（超低延迟）⭐⭐⭐⭐
 
 ```
 ┌─────────────────────────────────────────────┐
@@ -382,15 +529,15 @@ Parallel Old（老年代）：标记 - 整理算法
 
 核心技术：
   1. 染色指针（Colored Pointers）
-     ┌─────────────────────────────────┐
-     │ 64 位指针：42 位地址 + 4 位标记 + 18 位保留 │
-     │ 标记位直接存在指针中，无需额外空间  │
-     └─────────────────────────────────┘
+     ┌───────────────────────────────────────────────────┐
+     │ 64 位指针：46 位地址（支持 64TB 内存）+ 4 位标记 + 14 位保留 │
+     │ 标记位直接存在指针中，无需额外空间                    │
+     └───────────────────────────────────────────────────┘
   
   2. 读屏障（Load Barriers）
      ┌─────────────────────────────────┐
      │ 对象访问时检查指针颜色            │
-     │ 如需转发，自动重定向到新地址      │
+     │ 如需转发，自动重定向到新地址       │
      └─────────────────────────────────┘
   
   3. 并发整理
@@ -408,9 +555,18 @@ Parallel Old（老年代）：标记 - 整理算法
 适用：低延迟要求，金融交易，实时系统
 ```
 
+**配置参数**：
+```bash
+-XX:+UseZGC              # 启用 ZGC
+-Xms8g -Xmx8g            # 堆内存建议 > 4GB
+-XX:ZAllocationSpikeTolerance=2.0  # 分配尖峰容忍度
+-XX:ZCollectionInterval=0          # 自动间隔（0=自动）
+-XX:ZFragmentationLimit=25         # 碎片化限制
+```
+
 ---
 
-#### 7. Shenandoah（红帽开发的超低延迟收集器）
+### 3.7 Shenandoah（红帽开发的超低延迟收集器）
 
 ```
 ┌─────────────────────────────────────────────┐
@@ -423,7 +579,7 @@ Parallel Old（老年代）：标记 - 整理算法
 核心技术：
   1. 转发指针（Forwarding Pointers）
      ┌─────────────────────────────────┐
-     │ 原对象头存储转发地址             │
+     │ 原对象头存储转发地址              │
      │ 新对象分配到新区域                │
      └─────────────────────────────────┘
   
@@ -445,53 +601,91 @@ Parallel Old（老年代）：标记 - 整理算法
 适用：低延迟，开源偏好场景
 ```
 
-### 各版本垃圾回收器对比总结
-
-#### 性能对比表
-
-| 收集器 | JDK 版本 | 停顿时间 | 吞吐量 | 内存开销 | CPU 开销 | 适用场景 |
-|--------|---------|----------|--------|----------|----------|----------|
-| **Serial** | 1.3+ | 高（100-500ms） | 中 | 低 | 低 | 客户端，小内存 |
-| **ParNew** | 1.5+ | 中（50-200ms） | 中高 | 中 | 中 | 多核 CPU + CMS |
-| **Parallel** | 1.6+ | 中高（80-300ms） | **高** | 中 | 中 | 批处理，科学计算 |
-| **CMS** | 1.5-14 | **低**（20-100ms） | 中 | 中高 | 高 | Web 应用，B/S 架构 |
-| **G1** | 7u4+ | 中低（30-150ms） | 中高 | 高 | 中高 | **大内存，服务端** |
-| **ZGC** | 11+/15+ | **超低**（<10ms） | 中 | 中 | **很高** | 低延迟，金融交易 |
-| **Shenandoah** | 12+ | **超低**（<10ms） | 中低 | 中高 | 高 | 低延迟，开源场景 |
-
----
-
-#### 演进路线图
-
-```
-JDK 1.3 ──→ Serial（单线程）
-   │
-JDK 1.4 ──→ Parallel（吞吐量优化）
-   │
-JDK 1.5 ──→ ParNew + CMS（低停顿，并发回收）
-   │
-JDK 1.6 ──→ Parallel Old（老年代并行）
-   │
-JDK 7u4 ──→ G1（区域化分代，可预测停顿）
-   │
-JDK 8   ──→ G1 优化，移除 PermGen，引入 Metaspace
-   │
-JDK 9   ──→ G1 成为默认收集器
-   │
-JDK 11  ──→ ZGC（实验性，超低延迟）
-   │
-JDK 12  ──→ Shenandoah（红帽低延迟方案）
-   │
-JDK 14  ──→ CMS 废弃
-   │
-JDK 15  ──→ ZGC 正式支持
-   │
-JDK 17+ ──→ ZGC/Shenandoah 持续优化，G1 仍是主流
+**配置参数**：
+```bash
+-XX:+UseShenandoahGC     # 启用 Shenandoah
+-Xms8g -Xmx8g            # 堆内存建议
+-XX:ShenandoahGCHeuristics=compact  # 启发式策略
 ```
 
 ---
 
-#### 选择建议
+## 四、各版本垃圾回收器对比总结
+
+### 4.1 性能对比表
+
+| 收集器 | JDK 版本 | 停顿时间 |   吞吐量    | 内存开销 | CPU 开销 | 适用场景 |
+|--------|---------|----------|:--------:|:--------:|:--------:|----------|
+| **Serial** | 1.3+ | 高（100-500ms） |    中     | 低 | 低 | 客户端，小内存 |
+| **ParNew** | 1.5+ | 中（50-200ms） |    中高    | 中 | 中 | 多核 CPU + CMS |
+| **Parallel** | 1.6+ | 中高（80-300ms） |  **高**   | 中 | 中 | 批处理，科学计算 |
+| **CMS** | 1.5-14 | **低**（20-100ms） |    中     | 中高 | 高 | Web 应用，B/S 架构 |
+| **G1** | 7u4+ | 中低（30-150ms） |    中高    | 高 | 中高 | **大内存，服务端** |
+| **ZGC** | 11+/15+ | **超低**（<10ms） |    中     | 中 | 中高 | 低延迟，金融交易 |
+| **Shenandoah** | 12+ | **超低**（<10ms） |    中低    | 中高 | 高 | 低延迟，开源场景 |
+
+---
+
+### 4.2 演进路线图
+
+```
+JDK 1.3 ──→ Serial GC（唯一选择）
+             新生代 Serial + 老年代 Serial Old
+             单线程 STW，简单高效
+   │
+JDK 1.4.2 ─→ ① Parallel Scavenge（新生代并行回收，专注吞吐量）
+             ② ParNew（新生代并行版 Serial，为 CMS 适配）
+             Serial 仍作为兜底收集器
+   │
+JDK 1.5 ──→ CMS（Concurrent Mark Sweep）正式发布
+             老年代并发回收，主打低停顿
+             需搭配 ParNew 使用（CMS 不处理新生代）
+   │
+JDK 1.6 ──→ Parallel Old（老年代并行整理算法）
+             完善 Parallel GC 体系
+             新生代 Parallel Scavenge + 老年代 Parallel Old
+   │
+JDK 7u4 ──→ G1 GC 发布（实验特性）
+             基于 Region 的分代回收
+             支持可预测停顿时间目标
+   │
+JDK 8   ──→ ① G1 持续优化
+             ② 移除永久代（PermGen），替换为元空间（Metaspace）
+             ③ 默认收集器：Parallel GC（Parallel Scavenge + Parallel Old）
+             元空间使用本地内存，减少 GC 压力
+   │
+JDK 9   ──→ ① G1 GC 成为默认收集器
+             ② CMS 标记为"废弃候选"
+   │
+JDK 11  ──→ ① ZGC 发布（实验性，需 -XX:+UnlockExperimentalVMOptions -XX:+UseZGC）
+             ② 仅支持 Linux 平台
+             ③ TB 级内存支持，STW < 10ms
+             ④ G1 进一步优化（自适应 Region 大小等）
+   │
+JDK 12  ──→ Shenandoah GC 发布（实验性）
+             红帽主导的低延迟收集器
+             无分代设计
+   │
+JDK 14  ──→ ① CMS 正式废弃
+             ② ZGC 支持 macOS/Windows
+             ③ Shenandoah 从实验性转产品级
+   │
+JDK 15  ──→ ZGC 从实验性转产品级（正式支持）
+   │
+JDK 17+ ──→ ① ZGC/Shenandoah 持续优化（如 ZGC 压缩指针）
+(LTS)        ② G1 引入分代回收优化
+             ③ G1 仍是生产主流选择
+             ④ Epsilon GC（无操作 GC，用于性能测试）
+   │
+JDK 21  ──→ ① ZGC 成为推荐低延迟收集器
+(LTS)        ② Shenandoah 进一步降低停顿
+             ③ G1 持续优化
+             ④ ZGC 支持分代回收（JDK 21+ 重要特性）
+```
+
+---
+
+### 4.3 选择建议
 
 **按应用场景选择**：
 
@@ -515,71 +709,9 @@ JDK 17+ ──→ ZGC/Shenandoah 持续优化，G1 仍是主流
 
 ---
 
-#### 迁移建议（CMS → G1）
+## 五、垃圾回收调优
 
-如果您的应用还在使用 CMS，建议迁移到 G1：
-
-```bash
-# CMS 配置
--XX:+UseConcMarkSweepGC
--XX:+UseParNewGC
--XX:CMSInitiatingOccupancyFraction=75
-
-# 迁移到 G1
--XX:+UseG1GC
--XX:MaxGCPauseMillis=200
--XX:InitiatingHeapOccupancyPercent=45
-```
-
-**迁移步骤**：
-1. 压测 baseline（CMS）
-2. 切换 G1，调整参数
-3. 对比性能指标
-4. 灰度上线监控
-
----
-
-### CMS 收集器详解
-
-**执行阶段**：
-1. 初始标记（STW）：标记 GC Roots 直接关联
-2. 并发标记：遍历对象图
-3. 重新标记（STW）：修正并发期间变动
-4. 并发清除：清除垃圾
-
-**缺点**：
-- 对 CPU 敏感
-- 无法处理浮动垃圾
-- 产生内存碎片
-
-### G1 收集器详解
-
-**特点**：
-- 将堆划分为多个 Region
-- 优先回收价值最大的 Region
-- 可预测的停顿时间模型
-
-**执行阶段**：
-1. 初始标记（STW）
-2. 并发标记
-3. 最终标记（STW）
-4. 筛选回收（STW）
-
-### ZGC/Shenandoah 超低延迟收集器
-
-**目标**：
-- 停顿时间 < 10ms
-- 堆大小不影响停顿时间
-
-**技术**：
-- 染色指针（ZGC）
-- 转发指针（Shenandoah）
-- 读屏障
-- 并发整理
-
-## 垃圾回收调优
-
-### 常用参数
+### 5.1 常用参数
 
 ```bash
 # 堆内存设置
@@ -594,12 +726,14 @@ JDK 17+ ──→ ZGC/Shenandoah 持续优化，G1 仍是主流
 -XX:+UseConcMarkSweepGC # 使用 CMS
 
 # G1 调优
--XX:MaxGCPauseMillis=200    # 最大停顿时间目标
--XX:G1HeapRegionSize=16m    # Region 大小
--XX:InitiatingHeapOccupancyPercent=45  # 触发并发标记的堆占用率
+-XX:MaxGCPauseMillis=200    # 最大停顿时间目标（默认 200ms）
+-XX:G1HeapRegionSize=16m    # Region 大小（1MB-32MB）
+-XX:InitiatingHeapOccupancyPercent=45  # 触发并发标记的堆占用率（默认 45%）
+-XX:G1NewSizePercent=5      # 新生代最小比例（默认 5%）
+-XX:G1MaxNewSizePercent=60  # 新生代最大比例（默认 60%）
 ```
 
-### 调优目标选择
+### 5.2 调优目标选择
 
 | 场景 | 推荐收集器 | 关注点 |
 |------|-----------|--------|
@@ -608,166 +742,53 @@ JDK 17+ ──→ ZGC/Shenandoah 持续优化，G1 仍是主流
 | 小内存 | Serial/Parallel | 简单高效 |
 | 大内存 | G1/ZGC | 可预测停顿 |
 
-## 内存分配与回收策略
+### 5.3 G1 调优实战
 
-### 对象优先在 Eden 分配
-
-```java
-// 大部分对象在 Eden 分配，Minor GC 后存活进入 Survivor
-```
-
-### 大对象直接进入老年代
-
+**步骤 1：监控 baseline**
 ```bash
--XX:PretenureSizeThreshold=1m  # 大于 1MB 的对象直接进入老年代
+java -Xlog:gc*:file=gc.log:time,uptime:filecount=5,filesize=10M -jar app.jar
 ```
 
-### 长期存活对象进入老年代
-
+**步骤 2：分析 GC 日志**
 ```bash
--XX:MaxTenuringThreshold=15  # 对象年龄阈值，默认 15
+# 查看停顿时间
+grep "Pause Time" gc.log
+
+# 查看 Mixed GC 频率
+grep "Mixed GC" gc.log
+
+# 查看 Evacuation Failure
+grep "Evacuation Failure" gc.log
 ```
 
-### 动态对象年龄判定
-
-Survivor 中相同年龄所有对象大小总和大于 Survivor 空间一半，年龄大于等于该年龄的对象直接进入老年代。
-
-## 内存泄漏排查
-
-### 常见内存泄漏场景
-
-1. **静态集合**：静态集合持有对象引用
-2. **未关闭资源**：数据库连接、文件流等
-3. **监听器未移除**：事件监听器持有引用
-4. **ThreadLocal**：线程池场景下未 remove
-5. **缓存**：无限增长的缓存
-
-### 排查工具
-
-| 工具 | 用途 |
-|------|------|
-| jmap | 生成堆转储文件 |
-| jhat | 分析堆转储文件 |
-| VisualVM | 可视化监控分析 |
-| MAT | 内存分析工具 |
-| Arthas | 实时诊断 |
-
-### 排查步骤
-
-1. **确认泄漏**：堆内存持续增长，GC 无法回收
-2. **生成 dump**：`jmap -dump:format=b,file=heap.hprof <pid>`
-3. **分析 dump**：使用 MAT 等工具分析
-4. **定位原因**：找到占用内存最多的对象及引用链
-5. **修复代码**：解除不必要的引用
-
-## 内存泄漏实战演练
-
-### 运行示例代码
-
+**步骤 3：调整参数**
 ```bash
-# 编译项目
-mvn clean compile -DskipTests
+# 停顿过长 → 降低 MaxGCPauseMillis
+-XX:MaxGCPauseMillis=100
 
-# 运行内存泄漏演示（设置小堆内存快速触发）
-java -Xmx100m -Xms100m -XX:+PrintGC -XX:+PrintGCDetails \
-  -cp interview-service/target/classes \
-  cn.itzixiao.interview.jvm.GarbageCollectorDemo
+# GC 过频 → 提高 IHOP
+-XX:InitiatingHeapOccupancyPercent=50
+
+# 晋升失败 → 增加 G1ReservePercent
+-XX:G1ReservePercent=15
 ```
 
-### 用 jconsole 监控
-
-程序启动后会等待 30 秒，此时用 jconsole 连接：
-
+**步骤 4：迭代验证**
 ```bash
-jconsole
-```
+# 压测环境验证
+jmeter -n -t test.jmx -l result.jtl
 
-1. 在 Local Process 中选择 `GarbageCollectorDemo`
-2. 点击 Connect，选择"不安全连接"
-3. 切换到 "Memory" 标签页
-4. 观察堆内存曲线
-
-### GC 日志解读
-
-正常情况 vs 内存泄漏：
-
-```
-正常 GC:
-[GC 94206K->5000K(98304K)]  ← GC 后内存显著下降
-
-内存泄漏 GC:
-[Full GC 94206K->94200K(98304K)]  ← GC 后几乎不变！
-```
-
-**典型内存泄漏 GC 日志**：
-```
-[Full GC (Ergonomics) 
-  [PSYoungGen: 25600K->25599K(29696K)]   # 新生代几乎满
-  [ParOldGen: 68606K->68600K(68608K)]    # 老年代几乎满
-  94206K->94200K(98304K)]                # GC 前后几乎不变！
-```
-
-### 内存泄漏现象总结
-
-| 指标 | 正常情况 | 内存泄漏 |
-|------|----------|----------|
-| GC 后内存 | 明显下降 | 几乎不变 |
-| Full GC 频率 | 偶尔 | 持续频繁 |
-| 老年代使用 | 波动 | 持续高位 |
-| 最终结果 | 稳定运行 | OOM 崩溃 |
-
-### 内存泄漏曲线特征
-
-```
-内存使用
-  MB │
- 100 ┤           ╭───╮     ╭──╮      ← GC 后不降
-     │          ╱     ╲   ╱    ╲
-  75 ┤         ╱       ╲ ╱      ╲
-     │        ╱         ╲        ╲
-  50 ┤       ╱                    ╲
-     │      ╱                       ╲
-  25 ┤     ╱                          ╲  ← 最终 OOM
-     │    ╱
-   0 ┼───┴────────────────────────────┴─── 时间
-        ↑ GC 无法回收，曲线持续上升
-```
-
-### 常见面试题
-
-**问题 1：如何判断是否存在内存泄漏？**
-
-答：观察 GC 日志，如果 Full GC 后内存使用量几乎不变，说明存在内存泄漏。
-
-**问题 2：内存泄漏和内存溢出有什么区别？**
-
-| 内存泄漏 | 内存溢出 |
-|----------|----------|
-| 对象无法被回收 | 内存不足 |
-| 内存逐渐增长 | 一次性失败 |
-| 最终导致 OOM | 可能因泄漏或配置不足 |
-
-**问题 3：如何避免静态集合导致的内存泄漏？**
-
-```java
-// 错误：静态集合持有对象引用
-private static final List<Object> CACHE = new ArrayList<>();
-
-// 正确方案1：使用 WeakHashMap
-private static final Map<Object, Object> CACHE = new WeakHashMap<>();
-
-// 正确方案2：使用软引用
-private static final List<SoftReference<Object>> CACHE = new ArrayList<>();
-
-// 正确方案 3：定期清理
-CACHE.clear();  // 或使用有界队列
+# 对比性能指标
+# - 吞吐量（TPS）
+# - 响应时间（RT）
+# - GC 频率和停顿
 ```
 
 ---
 
-## 高频面试题：垃圾回收算法与收集器对比
+## 六、高频面试题
 
-### 问题 1：四种垃圾回收算法的区别和适用场景？
+### 6.1 四种垃圾回收算法的区别和适用场景？
 
 **参考答案**：
 
@@ -802,7 +823,7 @@ CACHE.clear();  // 或使用有界队列
 
 ---
 
-### 问题 2：CMS 和 G1 的区别？如何选择？
+### 6.2 CMS 和 G1 的区别？如何选择？
 
 **参考答案**：
 
@@ -847,7 +868,7 @@ CACHE.clear();  // 或使用有界队列
 
 ---
 
-### 问题 3：ZGC 如何实现超低延迟（<10ms）？
+### 6.3 ZGC 如何实现超低延迟（<10ms）？
 
 **参考答案**：
 
@@ -891,7 +912,7 @@ ZGC 的核心技术：
 
 ---
 
-### 问题 4：G1 的 Region 有哪些类型？
+### 6.4 G1 的 Region 有哪些类型？
 
 **参考答案**：
 
@@ -918,7 +939,7 @@ G1 将堆划分为多个固定大小的 Region（默认 2MB-32MB）：
 
 ---
 
-### 问题 5：如何选择合适的垃圾回收器？
+### 6.5 如何选择合适的垃圾回收器？
 
 **参考答案**：
 
@@ -959,41 +980,14 @@ G1 将堆划分为多个固定大小的 Region（默认 2MB-32MB）：
 
 ---
 
-### 问题 6：G1 和 ZGC 能同时使用吗？
-
-**答案**：**不能**。
-
-**原因**：
-- JVM 只能使用一种垃圾回收器
-- G1 和 ZGC 都是整堆收集器
-- 两者实现机制完全不同
-
-**验证方法**：
-```bash
-# 错误配置：同时启用 G1 和 ZGC
-java -XX:+UseG1GC -XX:+UseZGC -jar app.jar
-# JVM 会报错或忽略其中一个参数
-
-# 正确做法：二选一
-java -XX:+UseG1GC -jar app.jar    # 使用 G1
-java -XX:+UseZGC -jar app.jar     # 使用 ZGC
-```
-
----
-
-### 问题 7：什么是 Remembered Set？作用是什么？
+### 6.6 什么是 Remembered Set？作用是什么？
 
 **参考答案**：
 
 **Remembered Set（记忆集）**：
-- 用于记录跨代引用的数据结构
-- 每个 Region 维护一个 RSet
-- 记录"哪些外部 Region 引用了我"
-
-**作用**：
-- 避免全堆扫描
-- 仅扫描 RSet 中的引用
-- 加速 GC 过程
+- 用于记录跨 Region 引用的数据结构；
+- 每个 Region 维护一个 RSet，记录"当前 Region 中的对象引用了哪些外部 Region 的对象"；
+- 作用：GC 回收某 Region 时，仅扫描其 RSet 即可找到所有跨代/跨 Region 引用，避免全堆扫描，加速 GC 过程。
 
 **示例**：
 ```
@@ -1002,8 +996,8 @@ Region A (Old) ──────→ Region B (Eden)
    └──── RSet 记录 ─────────┘
 
 RSet 内容：
-  Region B 被以下对象引用：
-    - Region A, offset 0x1234
+  Region A 中的对象引用了以下 Region 的对象：
+    - Region B, offset 0x1234
     - Region C, offset 0x5678
 ```
 
@@ -1014,55 +1008,7 @@ RSet 内容：
 
 ---
 
-### 问题 8：如何调优 G1 收集器？
-
-**关键参数**：
-
-```bash
-# 基础设置
--Xms4g -Xmx4g                    # 初始/最大堆内存
--XX:+UseG1GC                     # 启用 G1
-
-# 停顿时间目标
--XX:MaxGCPauseMillis=200         # 期望最大停顿（默认 200ms）
-
-# 触发阈值
--XX:InitiatingHeapOccupancyPercent=45  # 并发标记触发点（默认 45%）
-
-# Region 设置
--XX:G1HeapRegionSize=16m         # Region 大小（1MB-32MB）
-
-# 其他优化
--XX:G1ReservePercent=10          # 预留堆比例（防止晋升失败）
--XX:G1NewSizePercent=5           # 新生代最小比例
--XX:G1MaxNewSizePercent=60       # 新生代最大比例
-```
-
-**调优步骤**：
-
-1. **监控 baseline**：
-   ```bash
-   java -Xlog:gc*:file=gc.log -jar app.jar
-   ```
-
-2. **分析 GC 日志**：
-   - 停顿时间是否达标
-   - Mixed GC 频率
-   - 是否有 Evacuation Failure
-
-3. **调整参数**：
-   - 停顿过长 → 降低 `MaxGCPauseMillis`
-   - GC 过频 → 提高 `IHOP`
-   - 晋升失败 → 增加 `G1ReservePercent`
-
-4. **迭代验证**：
-   - 压测环境验证
-   - 对比性能指标
-   - 灰度上线
-
----
-
-### 问题 9：ZGC 和 Shenandoah 的区别？
+### 6.7 ZGC 和 Shenandoah 的区别？
 
 **参考答案**：
 
@@ -1073,7 +1019,7 @@ RSet 内容：
 | **核心技术** | 染色指针 | 转发指针 + Brooks Pointer |
 | **指针开销** | 4 位标记（嵌入 64 位指针） | 每个对象额外指针 |
 | **读屏障** | 有 | 有 |
-| **兼容性** | 不支持压缩类指针 | 支持压缩类指针 |
+| **兼容性** | JDK 17+ 支持压缩类指针（-XX:+UseCompressedOops） | 天然支持压缩类指针 |
 | **CPU 开销** | 15%-30% | 20%-35% |
 | **吞吐量** | 比 G1 低 10%-15% | 比 G1 低 15%-20% |
 | **停顿时间** | <10ms | <10ms |
@@ -1085,38 +1031,89 @@ RSet 内容：
 
 ---
 
-### 问题 10：为什么 JDK 9 选择 G1 作为默认收集器？
+## 七、实战技巧
 
-**参考答案**：
+### 7.1 GC 日志分析
 
-**G1 的优势**：
+**G1 GC 日志示例**：
+```
+[GC pause (G1 Evacuation Pause) (young), 0.0052345 secs]
+   [Parallel Time: 4.2 ms, GC Workers: 8]
+   [Code Root Fixup: 0.1 ms]
+   [Clear CT: 0.2 ms]
+   [Other: 0.7 ms]
+      [Choose CSet: 0.0 ms]
+      [Ref Proc: 0.3 ms]
+      [Weak Ref Processing: 0.1 ms]
+   [Eden: 512.0M(512.0M)->0.0B(480.0M) Survivors: 64.0M->96.0M 
+    Heap: 1024.0M(4096.0M)->256.5M(4096.0M)]
+```
 
-1. **可预测的停顿时间**：
-   - 用户可设定目标停顿时间（`MaxGCPauseMillis`）
-   - G1 自动调整回收策略
+**解读**：
+- 停顿时间：5.2ms
+- 并行处理：4.2ms（8 个线程）
+- Eden 区：回收前总容量 512M、已用 512M（满） → 回收后总容量调整为 480M、已用 0B（全部回收）
+- Survivor 区：总容量从 64M 扩容到 96M（G1 动态调整年代大小）
+- 堆使用：1024MB → 256.5MB（回收 75%）
 
-2. **大堆友好**：
-   - 支持 TB 级别堆内存
-   - Region 化设计，扩展性强
+### 7.2 GC 问题排查
 
-3. **无内存碎片**：
-   - 整理算法保证空间连续
-   - 避免大对象分配失败
+**问题 1：频繁 Full GC**
+```bash
+# 查看 GC 日志
+jstat -gcutil <pid> 1000
 
-4. **自适应调节**：
-   - 自动调整 Region 大小
-   - 智能选择回收价值最大的 Region
+# 如果 FGC 列快速增长
+FGC     FGCT
+100     50.23   ← Full GC 次数和时间
 
-5. **并发能力强**：
-   - 并发标记减少 STW
-   - 多核 CPU 利用率高
+# 原因分析
+# 1. 老年代空间不足
+# 2. Metaspace 不足
+# 3. System.gc() 调用
+```
 
-**时代背景**：
-- JDK 9 发布时（2017 年），硬件已进入多核大内存时代
-- CMS 无法胜任大堆场景
-- G1 经过多年打磨（JDK 7u4 引入），已足够成熟
+**解决方案**：
+```bash
+# 1. 增加堆内存
+-Xmx8g -Xms8g
 
-**替代方案**：
-- JDK 8 及以前：Parallel + CMS
-- JDK 9-14：G1（默认）
-- JDK 15+：G1 / ZGC（根据需求选择）
+# 2. 调整 Metaspace
+-XX:MaxMetaspaceSize=512m
+
+# 3. 禁用显式 GC
+-XX:+DisableExplicitGC
+```
+
+**问题 2：GC 停顿时间过长**
+```bash
+# 查看 GC 日志中的停顿时间
+grep "Pause Time" gc.log
+
+# 如果停顿超过预期
+Pause Time: 500ms  ← 期望 200ms
+
+# 解决方案
+# 1. 切换到 G1 或 ZGC
+-XX:+UseG1GC
+
+# 2. 调整停顿目标
+-XX:MaxGCPauseMillis=100
+
+# 3. 减少堆内存
+-Xmx4g
+```
+
+---
+
+## 八、下一步学习
+
+- ⬅️ **[JVM内存模型](./01-JVM内存模型详解.md)** - 运行时数据区
+- 📚 **[JVM 调优实战](../05-SpringBoot与自动装配/README.md)** - 性能优化
+- 🔗 **[内存泄漏排查](../14-JavaIO模型/README.md)** - 实战技巧
+
+---
+
+**作者**：itzixiao  
+**创建时间**：2026-03-15  
+**更新时间**：2026-03-15
